--- a/exercises/01/index.html
+++ b/exercises/01/index.html
@@ -17,7 +17,9 @@
 
   <!-- FOTO INTRODUTTIVA -->
   <section>
-    <p <em>[Insert here a photo of us in Seville]</em></p>
+    <div align="center">
+      <img src="..."  width="300"> <!--nostra foto --> 
+    </div>
   </section>
 
   <!-- WHO WE ARE -->
@@ -74,12 +76,11 @@
         Loyola is more than a university; it is a community that helps us grow not only as students,  
         but also as individuals living in an increasingly globalized world.
       </p>
+      <div align="center">
+        <img src="Erasmus_Students_Loyola.jpg" alt="Erasmus welcome at Loyola University" width="500">
+        <p><em>Erasmus students at Loyola University</em></p>
+      </div>
       <p><a href="https://www.uloyola.es/" target="_blank">Visit Loyola's Official Website</a></p>
-    </section>
-
-    <!-- FOTO UNIVERSITÀ -->
-    <section>
-      <p <em>[Insert here photos of the universities]</em></p>
     </section>
 
     <!-- DISCOVERING SEVILLE -->
@@ -98,7 +99,22 @@
         or simply observing the rhythm of Andalusian life has shown us a warmth and authenticity  
         that is impossible not to fall in love with.
       </p>
-      <p <em>[Insert here photos of the city and our Erasmus experience]</em></p>
+      <div align="center">
+        <table>
+          <tr>
+            <td align="center">
+              <img src="PlazaDeEspana.jpg" alt="Plaza de España" width="450">
+              <p><em>Evening at Plaza de España</em></p>
+            </td>
+            <td style="width: 40px;"></td> <!-- spazio tra le immagini -->
+            <td align="center">
+              <img src="Carboneria.jpg" alt="Flamenco at La Carbonería" width="450">
+              <p><em>Flamenco performance at La Carbonería</em></p>
+            </td>
+          </tr>
+        </table>
+      </div>
+
     </section>
 
     <!-- CHALLENGES -->
@@ -134,9 +150,22 @@
         <li>The Erasmus welcome event at <strong>Loyola University</strong>, where strangers became friends in a matter of hours.</li>
         <li>A trip to <em>Córdoba</em>, where history, beauty, and laughter made the day unforgettable.</li>
       </ol>
-      <p>
-        These are only the beginning of many more experiences we cannot wait to live.
-      </p>
+      <div align="center">
+        <table>
+          <tr>
+            <td align="center">
+              <img src="Cordoba.jpeg" alt="Walking in Córdoba" width="300">
+              <p><em>Walking through the streets of Córdoba</em></p>
+            </td>
+            <td style="width: 40px;"></td> <!-- spazio tra le due immagini -->
+            <td align="center">
+              <img src="TintoDeVerano.jpg" alt="Tinto de Verano" width="300">
+              <p><em>Enjoying a refreshing Tinto de Verano</em></p>
+            </td>
+          </tr>
+        </table>
+      </div>
+
     </section>
 
     <!-- WHAT'S NEXT -->
@@ -145,20 +174,14 @@
       <p>
         Even though Seville already feels like home, our Erasmus adventure is far from over.  
         We are planning to travel and make the most of every single moment:  
-        discovering the beaches of <strong>Cádiz</strong>, enjoying the vibrant streets of <em>Málaga</em>,  
-        and hiking the breathtaking <strong>Caminito del Rey</strong>.  
-        Beyond Spain, we dream of visiting <strong>Portugal</strong> and even crossing into <em>Morocco</em>  
+        discovering the beaches of <strong>Cádiz</strong>, enjoying the vibrant streets of <strong>Málaga</strong>,  
+        and visiting new cities around Andalusia.  
+        Beyond Spain, we dream of exploring <strong>Portugal</strong> and even crossing into <strong>Morocco</strong> 
         to experience cultures so close geographically yet so different.  
       </p>
       <p>
         For us, Erasmus means exactly this: to study, to grow, but also to live fully.  
         To explore, to connect, and to create memories that will last a lifetime.
-      </p>
-    </section>
-
-    <!-- FOTO -->
-    <section>
-      <p <em>[Insert here photos of future trips and experiences]</em></p>
     </section>
   </main>
 
