--- a/exercises/01/index.html
+++ b/exercises/01/index.html
@@ -15,10 +15,10 @@
     </div>
   </header>
 
-  <!-- FOTO INTRODUTTIVA -->
+  <!-- INTRODUCTORY PHOTO -->
   <section>
     <div align="center">
-      <img src="..."  width="300"> <!--nostra foto --> 
+      <img src="PhotoOfUs.jpeg" alt="PHOTO OF US" width="300"/> 
     </div>
   </section>
 
@@ -66,21 +66,19 @@
       <h2>Why we chose Loyola University</h2>
       <p>
         Choosing <strong>Loyola University in Seville</strong> was not a random decision.  
-        We were looking for an institution that combined academic excellence with an international and multicultural atmosphere,  
+        We were looking for an institution that combined our academic background with an international and multicultural atmosphere,  
         and Loyola was exactly that.  
         Here, teaching is interactive and dynamic, with professors encouraging debates, teamwork, and creative approaches to learning.
       </p>
       <p>
         But what really convinced us was the environment: students from so many different countries,  
         all sharing the same curiosity and willingness to connect.  
-        Loyola is more than a university; it is a community that helps us grow not only as students,  
-        but also as individuals living in an increasingly globalized world.
+        <a href="https://www.uloyola.es/" target="_blank">Visit Loyola's Official Website</a>
       </p>
       <div align="center">
-        <img src="Erasmus_Students_Loyola.jpg" alt="Erasmus welcome at Loyola University" width="500">
+        <img src="Erasmus_Students_Loyola.jpg" alt="Erasmus welcome at Loyola University" width="500"/>
         <p><em>Erasmus students at Loyola University</em></p>
       </div>
-      <p><a href="https://www.uloyola.es/" target="_blank">Visit Loyola's Official Website</a></p>
     </section>
 
     <!-- DISCOVERING SEVILLE -->
@@ -103,12 +101,17 @@
         <table>
           <tr>
             <td align="center">
-              <img src="PlazaDeEspana.jpg" alt="Plaza de España" width="450">
+              <img src="Alcazar.jpeg" alt="Alcazar" width="350"/>
+              <p><em>A moment inside the majestic halls of the Alcázar</em></p>
+            </td>
+            <td style="width: 40px;"></td> 
+            <td align="center">
+              <img src="PlazaDeEspana.jpg" alt="Plaza de España" width="450"/>
               <p><em>Evening at Plaza de España</em></p>
             </td>
-            <td style="width: 40px;"></td> <!-- spazio tra le immagini -->
+            <td style="width: 40px;"></td> 
             <td align="center">
-              <img src="Carboneria.jpg" alt="Flamenco at La Carbonería" width="450">
+              <img src="Carboneria.jpg" alt="Flamenco at La Carbonería" width="450"/>
               <p><em>Flamenco performance at La Carbonería</em></p>
             </td>
           </tr>
@@ -123,19 +126,19 @@
       <p>
         Moving abroad is exciting, but it also means facing challenges.  
         Learning to adapt to a new language, handling bureaucracy,  
-        and balancing our studies with daily life in a foreign city was not always easy.  
-        But these challenges quickly became opportunities to grow stronger and more independent.
+        and balancing our studies with daily life in a foreign city is not always easy.  
+        But these challenges quickly become opportunities to grow stronger and more independent.
       </p>
       <p>
         What we are learning here is more than academics: we are learning about ourselves.  
         About being flexible, about listening, and about connecting with people  
-        whose background and culture are completely different from ours.  
+        whose background and culture are different from ours.  
         This growth will remain with us long after Erasmus is over.
       </p>
       <ul>
         <li>Getting used to Spanish schedules and lifestyle</li>
         <li>Learning academic terms in English and Spanish</li>
-        <li>Building friendships with students from all over Europe</li>
+        <li>Building friendships with students from all over the world</li>
       </ul>
     </section>
 
@@ -154,12 +157,17 @@
         <table>
           <tr>
             <td align="center">
-              <img src="Cordoba.jpeg" alt="Walking in Córdoba" width="300">
+              <img src="Caminito.png" alt="Caminito Del Rey - Malaga" width="270"/>
+              <p><em>Caminito Del Rey - Malaga</em></p>
+            </td>
+            <td style="width: 40px;"></td> 
+            <td align="center">
+              <img src="Cordoba.jpeg" alt="Walking in Córdoba" width="300"/>
               <p><em>Walking through the streets of Córdoba</em></p>
             </td>
-            <td style="width: 40px;"></td> <!-- spazio tra le due immagini -->
+            <td style="width: 40px;"></td> 
             <td align="center">
-              <img src="TintoDeVerano.jpg" alt="Tinto de Verano" width="300">
+              <img src="TintoDeVerano.jpg" alt="Tinto de Verano" width="300"/>
               <p><em>Enjoying a refreshing Tinto de Verano</em></p>
             </td>
           </tr>
@@ -186,7 +194,7 @@
     </section>
   </main>
 
-  <!-- FOOTER -->
+  <!-- CONTACTS AND EMAIL -->
   <footer>
     <p align="center"><em>© 2025 Martina Reverberi & Nicholas Braglia | Erasmus in Sevilla</em></p>
     <p align="center"><em>Contact: mreverberi@al.uloyola.es | nbraglia@al.uloyola.es</em></p>
