--- a/exercises/01/index.html
+++ b/exercises/01/index.html
@@ -18,7 +18,7 @@
   <!-- INTRODUCTORY PHOTO -->
   <section>
     <div align="center">
-      <img src="PhotoOfUs.jpeg" alt="PHOTO OF US" width="300"/> 
+      <img src="Images/PhotoOfUs.jpeg" alt="PHOTO OF US" width="300"/> 
     </div>
   </section>
 
@@ -76,7 +76,7 @@
         <a href="https://www.uloyola.es/" target="_blank">Visit Loyola's Official Website</a>
       </p>
       <div align="center">
-        <img src="Erasmus_Students_Loyola.jpg" alt="Erasmus welcome at Loyola University" width="500"/>
+        <img src="Images/Erasmus_Students_Loyola.jpg" alt="Erasmus welcome at Loyola University" width="500"/>
         <p><em>Erasmus students at Loyola University</em></p>
       </div>
     </section>
@@ -101,17 +101,17 @@
         <table>
           <tr>
             <td align="center">
-              <img src="Alcazar.jpeg" alt="Alcazar" width="350"/>
+              <img src="Images/Alcazar.jpeg" alt="Alcazar" width="350"/>
               <p><em>A moment inside the majestic halls of the Alcázar</em></p>
             </td>
             <td style="width: 40px;"></td> 
             <td align="center">
-              <img src="PlazaDeEspana.jpg" alt="Plaza de España" width="450"/>
+              <img src="Images/PlazaDeEspana.jpg" alt="Plaza de España" width="450"/>
               <p><em>Evening at Plaza de España</em></p>
             </td>
             <td style="width: 40px;"></td> 
             <td align="center">
-              <img src="Carboneria.jpg" alt="Flamenco at La Carbonería" width="450"/>
+              <img src="Images/Carboneria.jpg" alt="Flamenco at La Carbonería" width="450"/>
               <p><em>Flamenco performance at La Carbonería</em></p>
             </td>
           </tr>
@@ -157,17 +157,17 @@
         <table>
           <tr>
             <td align="center">
-              <img src="Caminito.png" alt="Caminito Del Rey - Malaga" width="270"/>
+              <img src="Images/Caminito.png" alt="Caminito Del Rey - Malaga" width="270"/>
               <p><em>Caminito Del Rey - Malaga</em></p>
             </td>
             <td style="width: 40px;"></td> 
             <td align="center">
-              <img src="Cordoba.jpeg" alt="Walking in Córdoba" width="300"/>
+              <img src="Images/Cordoba.jpeg" alt="Walking in Córdoba" width="300"/>
               <p><em>Walking through the streets of Córdoba</em></p>
             </td>
             <td style="width: 40px;"></td> 
             <td align="center">
-              <img src="TintoDeVerano.jpg" alt="Tinto de Verano" width="300"/>
+              <img src="Images/TintoDeVerano.jpg" alt="Tinto de Verano" width="300"/>
               <p><em>Enjoying a refreshing Tinto de Verano</em></p>
             </td>
           </tr>
